images units 4, 5 & 6 resized

--- a/_units/05.md
+++ b/_units/05.md
@@ -46,7 +46,7 @@ The orchestra tunes to the pitch of concert A4, which usually corresponds to sou
 
 Our percept of pitch is **logarithmically organized** such that an octave above concert A is twice its frequency, therefore, 880Hz; whereas the next octave above 880Hz is twice 880Hz, which is 1760Hz. Thus each octave corresponds to a doubling in frequency, resulting in a logarithmic function relating frequency to pitch.
 
-{% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" %}
+{% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" width="400px" %}
 
 ## Fundamental Frequency
 
