--- a/_units/06.md
+++ b/_units/06.md
@@ -101,7 +101,7 @@ characteristics that persist for much of the lifetime of a sound.
 
 The *spectral envelope* describes the overall shape of the spectrum,
 and gives us a sense of where and how the energy is distributed.
-{% include img-figure url="/MUTOR/assets/images/tpt-spec-env.png" description="A spectral envelope drawn over the spectrum of a trumpet playing A4 (440 Hz) at <em>mezzo-forte</em>." %}
+{% include img-figure url="/MUTOR/assets/images/tpt-spec-env.png" description="A spectral envelope drawn over the spectrum of a trumpet playing A4 (440 Hz) at <em>mezzo-forte</em>." width="500px" %}
 In figure {{ fignum }}, the dashed red line represents the spectral envelope,
 and simply connects the peaks of the spectrum. It should be noted that there
 is no one correct way to produce a spectral envelope, since it requires
