--- a/_units/04.md
+++ b/_units/04.md
@@ -135,7 +135,7 @@ inner or upper voices is considered consonant and needs no special treatement.
 {% include note author="jm" text="need an audio example of these chords" %}
 {% include img-figure url="/MUTOR/assets/images/fourths.png" 
 description="In common practice tonality, a fourth between the bottom voices 
-is dissonant, while one in the inner voices is consonant." %}
+is dissonant, while one in the inner voices is consonant." width="300px" %}
 
 This suggests that context matters, and the attribution of "dissonant" or
 "consonant" to an interval, the physical, sounding object, 
