--- a/_units/03.md
+++ b/_units/03.md
@@ -610,7 +610,7 @@ Top-Down influences also play important roles in the perception of more complex 
 
 {% include note author="gh" text="In some papers I-R is described as bottom-up process. This needs to be clarified" %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_happybday.jpg" description="happy birthday" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_happybday.png" description="happy birthday" width="300px" %}
 
 A line from the Happy Birthday song, illustrating the principle of gap-fill. More on these top-down expectations for melodic processes will be discussed in Unit 9.
 
