--- a/_units/04.md
+++ b/_units/04.md
@@ -350,7 +350,7 @@ comparison, and very different from each other. This can partly be explained
 by looking at the spectra in the figure below.
 
 {% include img-figure url="/MUTOR/assets/images/farbenorchestration.GIF"
-description="Spectral analysis of three orchestratiosn of the 'Farben'
+description="Spectral analysis of three orchestrations of the 'Farben'
 chord." %}
 
 In the second of Schoenberg's orchestrations, the rougher of the two,
