--- a/_units/02.md
+++ b/_units/02.md
@@ -231,7 +231,7 @@ Modulation detection refers to the ability of the auditory system to detect rapi
 
 One of the roles of the inferior colliculus, and also the inferior colliculus, seems to be to reflect amplitude modulation (McKinney et al, 2001). Amplitude modulation refers to the change in amplitude levels, usually at periodic rates. In musical performance, playing tremolo typically results in amplitude modulation. AM radio also relies on the application of amplitude modulation.
 
-{% include img-figure url="/MUTOR/assets/images/ttremolo.gif" description="Tremolo" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/ttremolo.png" description="Tremolo" width="300px" %}
 {% comment %} Tremolo - a case of amplitude modulation
 (image source: http://www.compositiontoday.com/sound_bank {% endcomment %}
 
