Fix error caused by Github merges

--- a/_units/08.md
+++ b/_units/08.md
@@ -129,23 +129,9 @@ The dots that are closer together are perceived as being grouped together.
 - we tend to see complete figures despite missing parts.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="Principle of closure" %}
 ## Common fate
-<<<<<<< HEAD
-- elements that change similarly over time tend to be grouped together. 
 
 {% include img-figure url="/MUTOR/assets/images/unit8_Common-Fate.gif" description="Principle of common fate" %}
-=======
-- elements that change similarly over time tend to be grouped together.
-<html>
-  <head>
-    <title>Common Fate</title>
-  </head>
-  <body>
-    <video controls src="/MUTOR/assets/videos/unit8_Common-Fate.mov">
-      Your browser does not support the audio element.
-    </video>
-  </body>
-</html>
->>>>>>> parent of 5cf3c98 (Revert "Replace audio files")
+elements that change similarly over time tend to be grouped together.
 
 # Melody
 
