--- a/_units/08.md
+++ b/_units/08.md
@@ -110,13 +110,8 @@ We perceive the white dots as one group and the pink dots as another group; this
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_similarity.png" description="Principle of similarity" %}
 ## Symmetry
 -- symmetrical figures are perceived as being grouped together.
-<<<<<<< HEAD
  The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical. 
  {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.gif" description="Principle of symmetry" width="400px" %}
-=======
- The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical.
- {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.gif" description="" %}
->>>>>>> parent of 5cf3c98 (Revert "Replace audio files")
 ## Proximity
 - elements that are close together are more likely to be grouped together.
 The dots that are closer together are perceived as being grouped together.
@@ -129,9 +124,9 @@ The dots that are closer together are perceived as being grouped together.
 - we tend to see complete figures despite missing parts.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="Principle of closure" %}
 ## Common fate
-
+- elements that change similarly over time tend to be grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_Common-Fate.gif" description="Principle of common fate" %}
-elements that change similarly over time tend to be grouped together.
+
 
 # Melody
 
