--- a/_units/08.md
+++ b/_units/08.md
@@ -179,7 +179,7 @@ In the I-R model, when given three notes making two intervals, the first interva
 
 In general, the I-R principles successfully predicted response patterns, which did not differ as a function of musical style, formal musical training, or cultural background. In short, the results were consistent with Narmour's claim of innate influences on melodic expectancies.  
 
-{% include img-figure url="/MUTOR/assets/images/unit8_ir.gif" description="Implication and Realization Intervals" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_ir.png" description="Implication and Realization Intervals" %}
 
 ### Definitions of the I-R model
 
@@ -203,7 +203,7 @@ Schellenberg (1997) showed via principle component analysis that only two princi
 #### Gap-Fill
 Gap-fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap-fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle and pitch-reversal is applied.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.gif" description="An illustration of gap-fill processes." %}
+{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.png" description="An illustration of gap-fill processes." %}
 
 Countless famous musical examples can illustrate the gap-fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean."
 
@@ -231,7 +231,7 @@ An example of a Hidden Markov Model can be used to predict weather:
 A graph of an HMM is shown above. The model predicts the weather of each day given the previous day. We can see that according to this model, the probability that a day is sunny given that the previous day is also sunny is 0.8, the probability of a foggy day given to the previous foggy day is 0.5, and the probability that a rainy day is followed by another rainy day is 0.6. Each weather state also predicts each other weather state, with lower probabilities.
 Adapted to music, HMMs can be used to generate melodies. Each interval can be a predictor of the next interval, as specified in gap fill and the IR model.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_hmm.gif" description="A Hidden Markov Model used to predict a melodic sequence. (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_hmm.png" description="A Hidden Markov Model used to predict a melodic sequence. (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
 
 The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
 
