--- a/_units/08.md
+++ b/_units/08.md
@@ -235,9 +235,7 @@ Adapted to music, HMMs can be used to generate melodies. Each interval can be a 
 
 The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_meltrans_patch.png" description="Screenshot of a Max patch implementing a melody transition matrix" width="300px" %}
-
-{% include note author="gh" text="This calls for a new solution. Besides, the transition-formatter is missing anyway" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_markovchain.png" description="Screenshot of a Max patch implementing a melody transition matrix" %}
 
 ## Texture Space
 
