--- a/_units/10.md
+++ b/_units/10.md
@@ -204,6 +204,8 @@ Some typical profiles are shown here (see also sections 6 and 7 in Unit 5: Pitch
 {% include img-figure url="/MUTOR/assets/images/unit10_probetoneprofiles1.png" description="Probe Tone profiles1" width="500px" %}
 (image source: Krumhansl, 1990)
 
+{% include img-figure url="/MUTOR/assets/images/unit10_probetonemaxpatch.png" description="Probe Tone Max Patch" %}
+
 Notice that when the melodies given to the subjects are in related keys (e.g. C major and a minor scales, as shown in the top panel), the average ratings are highly correlated. In contrast, in response to melodies in unrelated keys such as C major and F# major (bottom panel), the correlations between rating profiles are low, or even negatively correlated. 
 
 Probe tone profiles obtained for Western music are also shown to reflect the statistics of musical compositions (Krumhansl, 1990). 
