Branch with updates
-Minor Edits to Unit 1 (added video demo of FT); -added oboe & clarinet samples for Unit 1 (still need implementation); added image of Cosine.gif (needs updating); fixed spelling in MUTOR_CriticalBand.maxpat; added some de-clicking in MUTOR_Loudness1

--- a/_units/01.md
+++ b/_units/01.md
@@ -417,13 +417,25 @@ X(k)=\sum^{N-1}_{n=0}x(n)e^{i2\pi\frac{kn}{N}}
 (if you missed it, it's a little missing "-" sign in the exponent towards the 
 right-hand side).
 
+It can be difficult to form an intuition for the FT and DFT based on the 
+equations alone.  The following video provides a really nice visual demonstration
+of how this all works:
+
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/spUNpyF58BY" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
+
 While that is probably more math than you might normally come into contact with 
 in a course on music psychology, the FT allows us to perform very clever types of 
 analyses of sounds as we will see below. 
 
+
+
 ## Spectrum
 
-Once a wave form has been converted from the time domain to the frequency domain 
+Once a waveform has been converted from the time domain to the frequency domain 
 using a Fourier transformation, the resulting representation is often referred to as its
 *spectrum*. 
 The spectrum is basically a snapshot of the component parts of whatever waveform 
@@ -455,8 +467,31 @@ For example, above we learned that a sound's timbre or tone color is partially d
 what combinations of wave forms make up the sound.
 Looking at the images below, we are unable to see anything distinct in the timbres 
 of a short clip of a clarinet versus an oboe in the time domain.
+ 
+{% comment %}
+{% include img-figure url="/MUTOR/assets/images/waveform_trombone.png" 
+           description="A waveform" 
+%} {% assign fig_waveform=fignum %}
+{% endcomment %}
 
-> IMG OF TWO CLIPS HERE? 
+{% include begin-figure description="Clarinet Fortissimo C5" %}
+{% include begin-audio-example %}
+{% include audio-buffer name="mybuf1" src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" %}
+{% include audio-player name="player" buffer="mybuf1" %}
+<table><tr><td>
+{% include begin-overlay width="300px" height="200px" %}
+{% include audio-waveform name="waveform" buffer="mybuf1" %}
+{% include audio-playhead name="playhead" player="player" %}
+{% include end-overlay %}
+</td><td>
+{% include audio-meter name="meter" %}
+</td></tr><tr><td>
+{% include audio-connection outlet="player" inlet="meter" %}
+{% include audio-transport name="transport" %}
+</td></tr></table>
+{% include end-audio-example %}
+{% include end-figure %}
+{% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
 If we take both of these very short clips of audio and perform a Fourier transform
 on these waveforms we can move them from the time domain to the frequency 
